# distributed-process-simplelocalnet

./: cabal.project  cabal.project~  distributed-process-simplelocalnet.cabal
src/Control/Distributed/Process/Backend/: SimpleLocalnet.hs
